2021-03-22 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/mappings.i:
	  Fix broken debug symbols.

2021-03-22 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peeph-gbz80.def,
	  src/z80/peeph.def:
	  Fix rule 1b, remove redundant rules.

2021-03-22 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/gen.c:
	  Optimize pushing of 4B+ constant arguments.

2021-03-22 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* device/lib/gbz80/crt0.s,
	  support/regression/ports/ucgbz80/uCsim.cmd:
	  Change emulator entry to 0x100 like after real bootrom

2021-03-22 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/gen.c:
	  Optimize return of 4B numbers

2021-03-21 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peeph-gbz80.def:
	  Add rules for faster stack push.
	* src/z80/peeph.def:
	  Improve safety of some rules.

2021-03-21 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/SDCCpeeph.c:
	  Make operandsLiteral pickier and fix bug #3198.

2021-03-20 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sim/ucsim/z80.src/inst_lr35902.cc:
	  Harmonize disassembly syntax with syntax emitted by sdcc.

2021-03-19 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peeph-gbz80.def,
	  src/z80/peeph.def:
	  Add new peephole rules for precalc, constants reusage and stack access rearranging.

2021-03-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  src/pdk/main.c,
	  src/pdk/ralloc2.cc:
	  GETBYTE support for pdk.

2021-03-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Improve register allocation for GETWORD and SWAP iCodes.

2021-03-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Use genMove to simplify genSwap.

2021-03-18 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c:
	  Fix bug #3194.

2021-03-18 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/peeph.def:
	  Fix common peephole rule 41a: do not elimitate ld l,? before ld l,(hl)
