@@ -13,7 +13,7 @@
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU General Public License for more details.
 
-   You should have received a copy of the GNU General Public License 
+   You should have received a copy of the GNU General Public License
    along with this library; see the file COPYING. If not, write to the
    Free Software Foundation, 51 Franklin Street, Fifth Floor, Boston,
    MA 02110-1301, USA.
@@ -47,6 +47,7 @@
 #define EXCESS		126
 #define SIGNBIT		((unsigned long)0x80000000)
 #define __INFINITY	((unsigned long)0x7F800000)
+#define __NAN       ((unsigned long)0xFFC00000)
 #define HIDDEN		(unsigned long)(1ul << 23)
 #define SIGN(fp)	(((unsigned long)(fp) >> (8*sizeof(fp)-1)) & 1)
 #define EXP(fp)		(((unsigned long)(fp) >> 23) & (unsigned int) 0x00FF)
